src/index.css
body {
  margin: 0;
  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
    sans-serif;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

code {
  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
    monospace;
}

.mapContainer {
  position: absolute;
  top: 0;
  right: 0;
  left: 0;
  bottom: 0;
  z-index: 98;
}

.statsContainer {
  justify-content: "right";
  align-Content: "right";
  align-Items: "right";
  flex-Direction: "row";
  position: relative;
  display: flex;
  padding-top: 100px;
  width:100%;
  z-index: 99;
  text-align: left;

}

.custom-tooltip {

  background-color: rgb(18, 27, 38,0.7);
  padding-top: 5px;
  padding-bottom: 2px;
  padding-left: 20px;
  padding-right: 20px;


}



.statsCard{

  justify-content: "right";
  align-Content: "right";
  align-Items: "right";
  flex-Direction: "row";
  position: relative;
  display: flex;
  padding-top: 100px;
  top: 50%;
  left: 60%;
  right: 40%;
  z-index: 99;
  text-align: left;


}

.sourcesContainer {
  position: fixed;
  top: 10%;
  right: 50%;
  left: 30%;
  width: 60%;

  text-align: left;
}

.disclaimer {
  font-size: 10px;
  font-style: italic;
}

#overlay-wrapper {
  position: fixed;
  top: 0;
  left: 0;
  bottom: 0;
  right: 0;
}

#overlay-content-box {
  width: 80%;
  height: 50%;
  position: fixed;
  left: 10%;
  top: 25%;
  overflow-y: scroll;
}

